--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,7 @@ jobs:
           - ruby: "2.7"
           - ruby: "3.0"
           - ruby: "3.1"
+          - ruby: "3.2"
     steps:
       - uses: actions/checkout@v3
       - name: Install Ruby ${{ matrix.ruby }}
