Add Ruby 3.3 to CI matrix

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,7 @@ jobs:
           - ruby: "3.0"
           - ruby: "3.1"
           - ruby: "3.2"
+          - ruby: "3.3"
     steps:
       - uses: actions/checkout@v4
       - name: Install Ruby ${{ matrix.ruby }}
